--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/scripts.js"></script>
-    <title>Triangle Tracker</title>
-  </head>
+<head>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.3.1.js"></script>
+  <script src="js/bootstrap.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Beep Boop</title>
 </head>
   <body>
     <div class="container">
       <h1>Beep Boop</h1>
-      <form id="txtTranslator">
+      <form id="toTranslate">
         <div class="form-group">
           <label for="txt">Input text to see what the robot says:</label>
           <input id="inputtxt" type="text">
