replace name Dave with a userinput name field

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
       <h1>Beep Boop</h1>
       <form id="toTranslate">
         <div class="form-group">
-          <label for="txt">Input text to see what the robot says:</label>
-          <input id="inputtxt" type="text">
+          <label for="inputTxt">Input text to see what the robot says:</label>
+          <input id="inputTxt" type="text">
+        </div>
+        <div class="form-group">
+          <label for="inputName">'Who is talking to the robot (name):</label>
+          <input id="inputName" type="text">
         </div>
         <button type="submit" class="btn">Find out!</button>
       </form>
