--- a/index.html
+++ b/index.html
@@ -1,30 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-<head>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery-3.3.1.js"></script>
-  <script src="js/bootstrap.js"></script>
-  <script src="js/scripts.js"></script>
-  <title>Beep Boop</title>
-</head>
+  <head>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Beep Boop</title>
+  </head>
   <body>
     <div class="container">
-      <h1>Beep Boop</h1>
-      <form id="toTranslate">
-        <div class="form-group">
-          <label for="inputTxt">Input text to see what the robot says:</label>
-          <input id="inputTxt" type="text">
+      <h1 class="animated bounce">Beep Boop</h1>
+      <div >
+        <div class="row">
+          <div class="col-md-4 human">
+            <div class="result">
+
+              <div class="human imgBox">
+                <img src='img/human.png' alt='photo of man'>
+              </div>
+              <div class="dialogueBox humanSpeak">
+
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <form id="toTranslate">
+              <div class="form-group">
+                <label for="inputTxt">Input text to see what the robot says:</label>
+                <input id="inputTxt" type="text">
+              </div>
+              <div class="form-group">
+                <label for="inputName">'Who is talking to the robot (name):</label>
+                <input id="inputName" type="text">
+              </div>
+              <button type="submit" class="btn">Find out!</button>
+            </form>
+          </div>
+          <div class="col-md-4 robot">
+            <div class="result">
+
+              <div class="robot imgBox">
+                <img src='img/robot.png' alt='photo of robt'>
+              </div>
+              <div class="dialogueBox robotSpeak">
+              </div>
+
+            </div>
+          </div>
         </div>
-        <div class="form-group">
-          <label for="inputName">'Who is talking to the robot (name):</label>
-          <input id="inputName" type="text">
-        </div>
-        <button type="submit" class="btn">Find out!</button>
-      </form>
-      <div id="result">
       </div>
     </div>
   </body>
-</html>
+  </html>
