add background and more styles to css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <img src='img/human.png' alt='photo of man'>
               </div>
               <div class="dialogueBox humanSpeak">
-
               </div>
             </div>
           </div>
@@ -33,21 +32,19 @@
                 <input id="inputTxt" type="text">
               </div>
               <div class="form-group">
-                <label for="inputName">'Who is talking to the robot (name):</label>
+                <label for="inputName">Who is talking to the robot (name):</label>
                 <input id="inputName" type="text">
               </div>
-              <button type="submit" class="btn">Find out!</button>
+              <button type="submit" class="btn">See Robot Translation</button>
             </form>
           </div>
           <div class="col-md-4 robot">
             <div class="result">
-
               <div class="robot imgBox">
                 <img src='img/robot.png' alt='photo of robt'>
               </div>
               <div class="dialogueBox robotSpeak">
               </div>
-
             </div>
           </div>
         </div>
